# SETR

./: .gitignore  README.md  dailytemp.c  dll.c  dll.h  main.c
MiniProjeto/: CMakeLists.txt  prj.conf
MiniProjeto/doc/: Doxyfile  MAINPAGE.md
MiniProjeto/doc/html/: IoT_8c.html  IoT_8c.js  IoT_8c__incl.dot  RTDB_8h.html  RTDB_8h.js  RTDB_8h__dep__incl.dot  RTDB_8h__incl.dot  RTDB_8h_source.html  annotated.html  annotated_dup.js  classes.html  dir_68267d1309a1af8e8297ef4c3efbcdba.html  dir_68267d1309a1af8e8297ef4c3efbcdba.js  files.html  (+11 more)
MiniProjeto/src/: IoT.c  RTDB.c  RTDB.h
MiniProjeto/testing/: unitytests.c
Trab1/: .gitignore  CMakeLists.txt  Doxyfile  README.md
Trab1/doc/: Doxyfile  MAINPAGE.md
Trab1/html/: annotated.html  annotated_dup.js  classes.html  dir_68267d1309a1af8e8297ef4c3efbcdba.html  dll_8c.html  dll_8c.js  dll_8c__incl.dot  dll_8h.html  dll_8h__dep__incl.dot  dll_8h__incl.dot  dll_8h_source.html  files.html  functions.html  functions_vars.html  globals.html  globals_defs.html  globals_func.html  graph_legend.html  group__dll.html  group__dll.js  index.html  modules.html  modules.js  navtreedata.js  navtreeindex0.js  structDLL.html  structNode.html
Trab1/lib/: dll.c  dll.h
Trab1/src/: CMakeLists.txt  dll.c  dll.h  main.c
Trab1/src/lib/: CMakeLists.txt  dll.c  dll.h
Trab2/: README.md
Trab2/doc/: Doxyfile  MAINPAGE.md
Trab2/src/: CMakeLists.txt  data.csv  data.txt  main  main.c  sensor.c  sensor.h  test.c  values.csv
Trab2/src/lib/: CMakeLists.txt  sensor.c  sensor.h
Trab3/: CMakeLists.txt  VendingMachine.sgen  VendingMachine.ysc
Trab3/Assignment3/: .project
Trab3/app/: config.h  main.c  main.h
Trab3/doc/: Doxyfile  MAINPAGE.md
Trab3/itemisCREATE/: assignment3.sgen  assignment3.ysc
Trab3/src/: sc_types.h
Trab3/src-gen/: VendingMachine.c  VendingMachine.h  assignment3.h
(+184 files in other folders)
